# sonik

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  bheringermapping.json  build.sh
.claude/commands/: create-epic.md  create-prd.md  implement-epic.md  triage-change.md
.claude/scripts/: generate_doc.sh
.claude/templates/: adr-template.md
.github/instructions/: markdown-style.instructions.md
.github/prompts/: create-epic.prompt.md  create-prd.prompt.md  implement-epic.prompt.md  triage-change.prompt.md
.github/scripts/: generate_doc.sh
.github/templates/: epic-template.md  prd-template.md  roadmap-template.xml
Resources/MidiMappings/: behringer-ddm4000.json  generic-midi.json  reloop-contour-interface-edition.json  reloop-ddm4000.json
Source/: Main.cpp  SonikApplication.cpp  SonikApplication.h
Source/Features/AudioEngine/: AudioBufferHolder.h  AudioEngine.cpp  AudioEngine.h  AudioEngineMidiBridge.h  AudioFileLoader.cpp  AudioFileLoader.h  DeckAudioSource.h
Source/Features/BeatGrid/: BeatGridAnalyzer.cpp  BeatGridAnalyzer.h  BeatGridData.h  BeatGridManager.cpp  BeatGridManager.h
Source/Features/BeatJump/: BeatJumpComponent.cpp  BeatJumpComponent.h  BeatJumpEngine.cpp  BeatJumpEngine.h
Source/Features/Cue/: HotCueData.h  HotCueManager.cpp  HotCueManager.h  HotCuePadComponent.cpp  HotCuePadComponent.h
Source/Features/Deck/: AudioThreadState.h  DeckIdentifiers.h  DeckStateManager.cpp  DeckStateManager.h  SourceModeReader.h
Source/Features/KeyDetection/: KeyDetectionAnalyzer.cpp  KeyDetectionAnalyzer.h  KeyDetectionManager.cpp  KeyDetectionManager.h  KeyUtils.h
Source/Features/Loop/: LoopControlComponent.cpp  LoopControlComponent.h  LoopEngine.cpp  LoopEngine.h
Source/Features/Midi/: BindingResolver.cpp  BindingResolver.h  ControlTargetRegistry.h  DeviceListChangeListener.h  JuceMidiHost.cpp  JuceMidiHost.h  MappingParser.cpp  MappingParser.h  MappingSerializer.cpp  MappingSerializer.h  MappingStore.cpp  MappingStore.h  MappingTypes.h  MidiAudioEvent.h  MidiCommandHandler.h  MidiDeviceManager.cpp  MidiDeviceManager.h  MidiDeviceRecord.h  MidiFeedbackEngine.cpp  MidiFeedbackEngine.h  MidiHostInterface.h  MidiInboundEvent.h  MidiInboundRouter.cpp  MidiInboundRouter.h  MidiInputSubscriber.h  MidiMessageBridge.cpp  MidiMessageBridge.h  MidiMessageEvent.h  MidiOpenResult.h  MidiOutputThread.cpp  MidiOutputThread.h  MidiTargetCategory.h  Sha1.h  SoftTakeoverManager.cpp  SoftTakeoverManager.h
Source/Features/Quantize/: QuantizeButtonComponent.cpp  QuantizeButtonComponent.h  QuantizeService.h
Source/Features/SlipMode/: SlipButtonComponent.cpp  (+1 more)
Source/MidiHandlers/: CompositeMidiCommandHandler.cpp  CompositeMidiCommandHandler.h  DeckMidiHandler.cpp  DeckMidiHandler.h  LibraryMidiHandler.cpp  LibraryMidiHandler.h  MixerMidiHandler.cpp  MixerMidiHandler.h
Tests/: AlignmentResolverTests.cpp  ArrangementSnapshotTests.cpp  AudioEngineTests.cpp  AudioExportTests.cpp  AudioExporterTests.cpp  AudioFileLoaderTests.cpp  AutomationApplierTests.cpp  AutomationCaptureTapsTests.cpp  AutomationEditingTests.cpp  AutomationLaneUiTests.cpp  AutomationModelTests.cpp  BeatGridTests.cpp  BeatJumpTests.cpp  BindingResolverTests.cpp  ChannelBooleanLaneCaptureTests.cpp  ChannelFilterTests.cpp  ChannelGroupLayoutTests.cpp  ChannelStripTests.cpp  ChannelStripUiTests.cpp  ClipBlockTests.cpp  ClipPlacementEngineTests.cpp  ClipStreamerTests.cpp  ContinuousLaneCaptureTests.cpp  ControlTargetRegistryTests.cpp  CrossfaderTests.cpp  DawClipModelTests.cpp  DawPanelShellTests.cpp  DawStateSchemaTests.cpp  DawTimelineInteractionTests.cpp  DawTransportTests.cpp  DeckLayoutTests.cpp  DeckSourceModeTests.cpp  DeckStateTests.cpp  EditCommandTests.cpp  GroupedTracksTests.cpp  HotCueBeatJumpCaptureTests.cpp  HotCueTests.cpp  ImportClipTests.cpp  ImportPipelineTests.cpp  KeyDetectionTests.cpp  (+62 more)
Tools/: AutomationUiScreenshot.cpp
docs/epic/: EPIC-0001-deck-cdj-system.md  EPIC-0002-stem-separation.md  EPIC-0003-master-clock-sync-system.md  EPIC-0004-collection-library-system.md  EPIC-0005-midi-controller-system.md  EPIC-0006-midi-controller-system-v2-mapping-tooling-and-multi-device.md  EPIC-0007-mixer.md  EPIC-0008-daw-timeline-foundation-and-live-deck-projection.md  EPIC-0009-performance-recording-and-arrangement-capture.md  EPIC-0010-timeline-playback-engine-and-non-destructive-clip-editing.md  EPIC-0011-daw-automation-system.md  EPIC-0012-session-persistence-and-audio-export.md
docs/prd/: PRD-0001-deck-state-management.md  PRD-0002-audio-engine-core.md  PRD-0003-audio-file-decoding-and-loading.md  PRD-0004-transport-system.md  PRD-0005-deck-ui-shell-and-dynamic-layout.md  PRD-0006-waveform-analysis-and-display.md  PRD-0007-track-info-display.md  PRD-0008-bpm-and-beatgrid-analysis.md  PRD-0009-key-detection.md  PRD-0010-pitch-fader-and-gain-control.md  PRD-0011-time-stretching.md  PRD-0012-cue-points-and-hot-cues.md  PRD-0013-quantize-mode.md  PRD-0014-looping-system.md  PRD-0015-beat-jump.md  PRD-0016-needle-drop-and-waveform-seeking.md  PRD-0017-slip-mode.md  PRD-0018-jog-wheel.md  PRD-0019-ml-inference-runtime.md  PRD-0019-onnx-runtime-integration-and-model-management.md  PRD-0020-stem-separation-engine.md  PRD-0020-stem-separation.md  PRD-0021-stem-aware-audio-playback.md  PRD-0022-stem-aware-time-stretching.md  PRD-0023-stem-separation-ui.md  PRD-0024-bpm-editor-and-beatgrid-offset-controls.md  PRD-0025-key-stepper-pitch-transposition.md  PRD-0026-master-clock-core.md  PRD-0027-tempo-sync-engine.md  PRD-0028-continuous-phase-lock.md  PRD-0029-sync-ui-phase-meter-and-master-bpm-display.md  PRD-0030-library-database-schema-and-migration.md  PRD-0031-watch-folder-scanner-and-track-ingestion.md  PRD-0032-async-library-query-engine.md  PRD-0033-library-ui-shell.md  PRD-0034-track-loading-and-drag-and-drop-to-deck.md  PRD-0035-deck-aware-smart-filters.md  PRD-0036-playlist-management.md  PRD-0037-track-rating-and-played-session-indicator.md  PRD-0038-bulk-analysis-queue-and-right-click-context-menus.md  (+64 more)
scripts/: capture_midi_controls.py  export_bs_roformer.py  separate_stems.py
(+256 files in other folders)
